# UFO_Player

source/: CMakeLists.txt
source/internal_libraries/: CMakeLists.txt
source/internal_libraries/lib_library_manager/: CMakeLists.txt
source/internal_libraries/lib_library_manager/include/: library_manager.hpp
source/internal_libraries/lib_library_manager/src/: library_manager.cpp
source/internal_libraries/lib_media_player/: CMakeLists.txt
source/internal_libraries/lib_media_player/include/: media_player.hpp
source/internal_libraries/lib_media_player/src/: media_player.cpp
source/internal_libraries/main/include/: main.hpp
source/internal_libraries/main/src/: main.cpp
source/resources/qml/: main.qml
source/resources/qml/components_custom/: UFO_FullScreen.qml  UFO_Player_Button.qml  UFO_VideoElement.qml
source/resources/qml/components_ufo/: UFO_SideBar.qml  UFO_Slider.qml
source/resources/qml/pages/: UFO_Player.qml  UFO_VideoLibrary.qml
