# [[ Add Internal Libraries ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_app_theme")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_library_manager")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_media_player")

# Add more internal libraries as needed...

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Internal Libraries ]]
